letter spacing fix

--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -79,5 +79,5 @@ h3 {
     font-size: 20px;
     margin-top: 130px;
     padding: 10px 0;
-    letter-spacing: 2px;
+    letter-spacing: 3px;
 }
